[tool.poetry]
name = "labthings"
version = "0.8.0"
description = "Python implementation of LabThings, based on the Flask microframework"
readme = "README.md"
repository = "https://github.com/labthings/python-labthings/"
authors = ["Joel Collins <joel@jtcollins.net>"]
classifiers = [
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: WSGI"
]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.1"
marshmallow = "^3.4.0"
webargs = "^6.0.0"
apispec = "^3.2.0"
flask-cors = "^3.0.8"
zeroconf = ">=0.24.5,<0.29.0"
flask-threaded-sockets = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = {version = "^19.10b0",allow-prereleases = true}
pytest-cov = "^2.10.1"
numpy = "^1.19.1"
jsonschema = "^3.2.0"
pylint = "^2.5.3"
sphinx = "^3.2.1"
sphinx-autoapi = "^1.4.0"
sphinx-rtd-theme = "^0.5.0"

[tool.black]
exclude = '(\.eggs|\.git|\.venv)'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

