[tool.poetry]
name = "labthings"
version = "1.1.0"
description = "Python implementation of LabThings, based on the Flask microframework"
readme = "README.md"
repository = "https://github.com/labthings/python-labthings/"
authors = ["Joel Collins <joel@jtcollins.net>"]
classifiers = [
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: WSGI"
]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.1"
marshmallow = "^3.4.0"
webargs = "^6.0.0"
apispec = "^3.2.0"
flask-cors = "^3.0.8"
zeroconf = ">=0.24.5,<0.29.0"
apispec_webframeworks = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = {version = "^20.8b1",allow-prereleases = true}
pytest-cov = "^2.10.1"
numpy = "^1.19.1"
jsonschema = "^3.2.0"
pylint = "^2.6.0"
sphinx = "^3.2.1"
sphinx-autoapi = "^1.5.1"
sphinx-rtd-theme = "^0.5.0"

[tool.black]
exclude = '(\.eggs|\.git|\.venv)'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

