[tool.poetry]
name = "labthings"
version = "1.2.4"
description = "Python implementation of LabThings, based on the Flask microframework"
readme = "README.md"
repository = "https://github.com/labthings/python-labthings/"
authors = ["Joel Collins <joel@jtcollins.net>"]
classifiers = [
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: WSGI"
]
include = ["src/labthings/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.1"
marshmallow = "^3.4.0"
webargs = ">=6,<9"
apispec = {version = ">=3.2,<5.0", extras = ["yaml"]}
flask-cors = "^3.0.8"
zeroconf = ">=0.24.5,<0.32.0"
apispec_webframeworks = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = {version = "^20.8b1",allow-prereleases = true}
pytest-cov = "^2.11.1"
jsonschema = "^3.2.0"
pylint = "^2.7.2"
sphinx = "^3.5.3"
sphinx-autoapi = "^1.8.1"
sphinx-rtd-theme = "^0.5.2"
mypy = "^0.902"

[tool.black]
exclude = '(\.eggs|\.git|\.venv|node_modules/)'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = "fixme,C,R"
max-line-length = 88

[tool.pylint.'MASTER']
ignore = "marshmallow_jsonschema"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
